fix tooltips on mobile

--- a/src/components/tooltip/tooltip.module.css
+++ b/src/components/tooltip/tooltip.module.css
@@ -25,3 +25,10 @@
   bottom: -4px;
   left: 50%;
 }
+
+
+@media (max-width: 640px) {
+  .tooltip {
+    max-width: 80vw;
+  }
+}
